# NetworkManager-mdv

./: README.mdv  configure.ac
data/: NetworkManager.service.in
initscript/Mandriva/: networkmanager.in
man/: NetworkManager.conf.5.in
patches/: NetworkManager-mdv.patch  README  networkmanager.patch
system-settings/plugins/: Makefile.am
system-settings/plugins/ifcfg-mdv/: Makefile.am  common.h  nm-ifcfg-connection.c  parse_wpa_supplicant_conf.c  parse_wpa_supplicant_conf.h  plugin.c  reader.c  reader.h  utils-mdv.c  utils-mdv.h  utils.c  utils.h  writer.c
